force-app/main/default/objects/lwrp__Field_Permission_Snapshot__c/fields/lwrp__Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Created_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who created this snapshot.</description>
    <label>Created By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Field Permission Snapshots</relationshipLabel>
    <relationshipName>Field_Permission_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>