force-app/main/default/objects/lwrp__Field_Permission_Snapshot__c/fields/lwrp__Status__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Status__c</fullName>
    <description>The status of this snapshot. Processing = snapshot creation in progress, Active = snapshot ready to use, Restoring = permissions being restored, Restored = permissions were restored, Error = an error occurred during processing.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Restoring</fullName>
            </value>
            <value>
                <fullName>Restored</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>