force-app/main/default/objects/lwrp__Field_Permission_Snapshot__c/fields/lwrp__Total_Fields__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Total_Fields__c</fullName>
    <description>The total number of deprecated fields included in this snapshot.</description>
    <label>Total Fields</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>