force-app/main/default/objects/lwrp__Field_Permission_Snapshot__c/fields/lwrp__Total_Permission_Entries__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Total_Permission_Entries__c</fullName>
    <description>The total number of permission entries (profiles/permission sets with access) in this snapshot.</description>
    <label>Total Permission Entries</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>