force-app/main/default/objects/lwrp__Field_Permission_Snapshot__c/listViews/lwrp__All.listView-meta.xml
<ListView>
    <fullName>lwrp__All</fullName>
    <columns>NAME</columns>
    <columns>lwrp__Snapshot_Date__c</columns>
    <columns>lwrp__Status__c</columns>
    <columns>lwrp__Total_Fields__c</columns>
    <columns>lwrp__Total_Permission_Entries__c</columns>
    <columns>lwrp__Created_By_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>